# lurkuitae_terminal

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp  poem2.asm  slice_aa  slice_ab  slice_ac  slice_ad  slice_ae  slice_af  slice_ag  slice_ah  slice_ai  slice_aj  slice_ak  slice_al  slice_am  slice_an
core/: memory.cpp  memory.h  ollama_interface.cpp  ollama_interface.h  system_handler.cpp  system_handler.h
luciforms/fusion/: rencontre_damier.lcf
weird_hello/: weird_hello  weird_hello.asm
